hard-gists/1693769/run.log
=== Docker Run Log for 1693769 ===
Started at: Mi 29. Okt 12:23:08 CET 2025

[2025-10-29 12:23:09] START: Running container for 1693769
[2025-10-29 12:23:09] SUCCESS: Container 561cbbfd65042ab2700402bae373cac101dacc49fa22c02730c7babc7e8eaad2 started for 1693769
=== Container logs for 1693769 ===
  File "/snippet.py", line 55
    print 'Plotting data with + indicating (y = 1) examples and o ' \
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1693769 ===
[2025-10-29 12:23:11] INFO: Container 561cbbfd65042ab2700402bae373cac101dacc49fa22c02730c7babc7e8eaad2 has stopped
